--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </section>
         </main>
         <footer>
-            &copy; Made by Jefferson Lopez and Brandon Rubiano
+            &copy; Made by Jefferson Lopez and Brandon Rubiano Gil
         </footer>
 
         
